--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Jhene Aiko</div>
-        <div class=navbar>
+        <div class="header">
+            <img class="head" src="https://www.theaudiodb.com/images/media/artist/logo/uvspws1475785587.png">
+        
+        </div>
+        <div class="navbar">
              <a href="index.html">Home</a>
              <a href="about.html">About</a>
              <a href="gallery.html ">Gallery</a>
