--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Jhene Aiko</div>
+        <div class="header"><img class="head" src="https://www.theaudiodb.com/images/media/artist/logo/uvspws1475785587.png"></div>
         <div class=navbar>
              <a href="#">Home</a>
              <a href="#">About</a>
